next
----
-metagene: updated metagene2bsml script to use the Ergatis::IdGenerator module for feature ID's.
-translate_sequence: added option to delete any fasta files generated by component that aren't gene/polypeptide sequences.
-tbl2asn: Reworked component so now it won't require a ITERATOR_LIST_FILE, and can be chained to the end of a bsml2tbl run
-ber: added project_abbreviation config variable so berbtab2bsml isn't dependent on specific assembly id patterns.
-augustus2bsml.pl: added 2.3.1 to version map
-glimmer3: added support for single input files
-prok_pipeline: replaced the single version of the prok pipeline with two new versions (one with database loading and one without)

ergatis-v2r12b1
----
-pipeline_summary: will use the second set of non-space chars in the input fasta file and set it to Sequence[@title]
-build_pipeline.cgi: will skip adding inputs unless they have a value.
-pipeline_summary: rewrite of pipeline_summary.pl (includes ordered locus assignment)
-p_func: included p_func.i1.xml to Makefile.PL
-bsml2chado: Adding <state> element to cache primary keys step in bsml2chado.xml
-bsml2chado: Adding checksum_filename to component files
-p_func: Bug fixes and minor improvements and update to component files
-tRNAscan-SE: now allows no search type to be specified, in order to invoke the default search type of 'eukaryotic'
-split_fasta: corrected problem with duplicates in the output list
-genemark-es: new component
-tmhmm2bsml: changed Seq-data-import[@id] value to ensure id does not start with numbers.
-genbank2bsml: Changing Feature/Attribute@name="gene_symbol" instead of "gene" to agree with gff2bsml and prok pipeline
-xdformat: added default option: -k ignore (skip) any invalid letter codes in the FASTA input
-hmmls: New component.
-fuzznuc: New component.
-wu-blast2bsml: Added parameter filter_hsps_for_stats which will use only HSPs that contribute to the best Sum(P) when calculating Seq-pair-alignment %identity/coverage/similarity values.