@@ -6,6 +6,10 @@ classification = functional prediction
 $;OUTPUT_FILE_BASE_NAME$; =
 ;; list of gene describing bsml [start_site_curation bsml list]
 $;SOURCE_BSML_FILE$; = 
+;; Path to the sort binary
+$;SORT_BIN$; = /bin/sort
+;; Path to databases
+$;DATABASE_PATH$: = /usr/local/projects/db
 
 [input]
 ;;This is hardcoded and used internally. Do not change!
