@@ -9,6 +9,8 @@ $;ANNOTATE_ON$; = transcript
 $;BSML_FEATURE_LOOKUP_LIST$; = 
 ;;Valid Evidence type (describes input format, ex. Lipoprotein, HMM, BER, etc.)
 $;EVIDENCE_TYPE$; = 
+;;Path to database files
+$;DATABASE_PATH$; = 
 
 [input]
 ;; Input list of lists
