@@ -1,5 +1,6 @@
 next
 ----
+-p_func/parse_evidence: Database path is now configurable
 -metagene: updated metagene2bsml script to use the Ergatis::IdGenerator module for feature ID's.
 -translate_sequence: added option to delete any fasta files generated by component that aren't gene/polypeptide sequences.
 -tbl2asn: Reworked component so now it won't require a ITERATOR_LIST_FILE, and can be chained to the end of a bsml2tbl run
